hphp/hack/test/typecheck/enum_class_label/attribute_argument_label.php.exp
ERROR: File "attribute_argument_label.php", line 3, characters 17-29:
Attribute arguments must be literals (Parsing[1002])
ERROR: File "attribute_argument_label.php", line 3, characters 3-15:
Unbound name: `SomeAttribute` (an object type) (Naming[2049])
ERROR: File "attribute_argument_label.php", line 3, characters 3-15:
Unrecognized user attribute: `SomeAttribute` does not have a class. Please declare a class for the attribute. (Naming[2049])
ERROR: File "attribute_argument_label.php", line 3, characters 17-25:
Unbound name: `SomeClass` (an object type) (Naming[2049])
ERROR: File "attribute_argument_label.php", line 3, characters 17-29:
This label is not a valid reference to a member of the given enum class (Typing[4110])
  File "attribute_argument_label.php", line 3, characters 26-29:
  Expected a class with a constant `Bar`
  File "attribute_argument_label.php", line 3, characters 17-25:
  But got `SomeClass`
