hphp/hack/test/typecheck/enum_class_label/attribute_argument_label.php
<?hh

<<SomeAttribute(SomeClass#Bar)>>
function foo(): void {}
